// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render select with 1 selected option 1`] = `
<Select
  className=""
  errorText=""
  isControlled={false}
  label=""
  name="test-name"
  onChange={[Function]}
  options={
    Object {
      "DE": "Germany",
      "US": "United states",
    }
  }
  placeholder=""
  translateErrorText={true}
  value="DE"
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={true}
    htmlFor="test-name"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv formElement"
    >
      <select
        className="css-1ayo3zo select"
        id="test-name"
        name="test-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value="DE"
      >
        <option
          className="option"
          key="test-name_DE"
          value="DE"
        >
          Germany
        </option>
        <option
          className="option"
          key="test-name_US"
          value="US"
        >
          United states
        </option>
      </select>
      <Chevron
        className="css-1h5rpg9"
      >
        <Icon
          className="css-1h5rpg9"
          color={null}
          content="<path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\"/><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />"
          size="inherit"
          viewBox="0 0 24 24"
        >
          <svg
            className="css-yys9hb css-1h5rpg9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\"/><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />",
              }
            }
            style={
              Object {
                "fill": null,
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </Chevron>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              Object {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</Select>
`;

exports[`<Select /> should render select with 2 options 1`] = `
<Select
  className=""
  errorText=""
  isControlled={false}
  label=""
  name="test-name"
  onChange={[Function]}
  options={
    Object {
      "DE": "Germany",
      "US": "United states",
    }
  }
  placeholder=""
  translateErrorText={true}
  value=""
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-name"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv formElement"
    >
      <select
        className="css-1ayo3zo select"
        id="test-name"
        name="test-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      >
        <option
          className="option"
          key="test-name_DE"
          value="DE"
        >
          Germany
        </option>
        <option
          className="option"
          key="test-name_US"
          value="US"
        >
          United states
        </option>
      </select>
      <Chevron
        className="css-1h5rpg9"
      >
        <Icon
          className="css-1h5rpg9"
          color={null}
          content="<path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\"/><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />"
          size="inherit"
          viewBox="0 0 24 24"
        >
          <svg
            className="css-yys9hb css-1h5rpg9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\"/><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />",
              }
            }
            style={
              Object {
                "fill": null,
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </Chevron>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              Object {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</Select>
`;

exports[`<Select /> should render select with no options 1`] = `
<Select
  className=""
  errorText=""
  isControlled={false}
  label=""
  name="test-name"
  onChange={[Function]}
  options={Object {}}
  placeholder=""
  translateErrorText={true}
  value=""
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={true}
    hasValue={false}
    htmlFor="test-name"
    isFocused={false}
    label=""
    placeholder=""
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv formElement"
    >
      <select
        className="css-1ayo3zo select"
        id="test-name"
        name="test-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value=""
      />
      <Chevron
        className="css-1h5rpg9"
      >
        <Icon
          className="css-1h5rpg9"
          color={null}
          content="<path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\"/><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />"
          size="inherit"
          viewBox="0 0 24 24"
        >
          <svg
            className="css-yys9hb css-1h5rpg9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z\\"/><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\" />",
              }
            }
            style={
              Object {
                "fill": null,
                "fontSize": "inherit",
              }
            }
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          />
        </Icon>
      </Chevron>
      <Underline
        hasErrorMessage={false}
        isFocused={false}
      >
        <div
          className="css-ycal4l underline"
        >
          <div
            className="css-1tpmuef"
            style={
              Object {
                "borderBottomColor": "var(--color-primary, #fa5400)",
                "transform": "scale3d(0,1,1)",
              }
            }
          />
        </div>
      </Underline>
    </div>
  </FormElement>
</Select>
`;
